All tests passing. Coverage with jacoco.

--- a/kalaha/pom.xml
+++ b/kalaha/pom.xml
@@ -68,6 +68,11 @@
 					<warSourceDirectory>WebContent</warSourceDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.7.9</version>
+			</plugin>
 		</plugins>
 	</build>
 </project>
