--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ cache:
 deploy:jdk8:
   stage: build
   script:
-    - mvn package
+    - mvn -B package
     - ls
     - ls target/
   only:
@@ -33,7 +33,7 @@ staging:
     - apt-get update -qy
     - apt-get install -y ruby-dev
     - gem install dpl
-    - dpl --provider=heroku --app=HEROKU_STAGING_APP --api-key=$HEROKU_STAGING_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_STAGING_APP --api-key=$HEROKU_STAGING_API_KEY
   dependencies:
     - deploy:jdk8
   artifacts:
