--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,8 @@ staging:
     - apt-get install -y ruby-dev
     - gem install dpl
     - ls
-    - ls target/
-    - ls target/dependency/
+    - ls public/
+    - ls public/dependency/
     - dpl --provider=heroku --app=$HEROKU_STAGING_APP --api-key=$HEROKU_STAGING_API_KEY
   dependencies:
     - deploy:jdk8
